Bug #11140
libraidcfg: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from /code/illumos-gate/proto/root_i386/usr/include/iso/time_iso.h:49:0, from /code/illumos-gate/proto/root_i386/usr/include/time.h:40, from /code/illumos-gate/proto/root_i386/usr/include/sys/time.h:462, from /code/illumos-gate/proto/root_i386/usr/include/sys/select.h:53, from /code/illumos-gate/proto/root_i386/usr/include/sys/types.h:640, from /code/illumos-gate/proto/root_i386/usr/include/fcntl.h:39, from ../common/raidcfg.c:28: ../common/raidcfg.c: In function 'raidcfg_init': /code/illumos-gate/proto/root_i386/usr/include/sys/null.h:32:14: error: passing argument 2 of 'mutex_init' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../common/raidcfg.c:1192:33: note: in expansion of macro 'NULL' (void) mutex_init(&raidcfg_mp, NULL, NULL); ^~~~ In file included from /code/illumos-gate/proto/root_i386/usr/include/thread.h:43:0, from ../common/raidcfg.c:45: /code/illumos-gate/proto/root_i386/usr/include/synch.h:109:5: note: expected 'int' but argument is of type 'void *' int mutex_init(mutex_t *, int, void *); ^~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8bc1b774e648197aa4450e0eec233f0efeebc99e
commit 8bc1b774e648197aa4450e0eec233f0efeebc99e Author: Toomas Soome <tsoome@me.com> Date: 2019-07-03T05:28:01.000Z 11140 libraidcfg: NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>