11140 libraidcfg: NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>